- Pulled some <a href>s out of includes/leftbar.html to make things easier to   work on.

--- a/control_panel/srv/controlpanel/includes/leftbar.html
+++ b/control_panel/srv/controlpanel/includes/leftbar.html
@@ -2,9 +2,11 @@
 
 <div id="leftbar" align="left">
 <h2>Controls</h2>
-<a href="">Network Interfaces</a><br />
-<a href="">Mesh Networking</a><br />
-<a href="">Gatewaying</a><br />
-<a href="">Web Applications</a><br />
-<a href="">Monitoring</a><br />
+<a href="/">System Status</a><br />
+<a href="/traffic">Network Traffic</a><br />
+Network Interfaces<br />
+Mesh Networking<br />
+Gatewaying<br />
+Web Applications<br />
+Monitoring<br />
 </div>
