- Rebuilt the CherryPy Porteus module.  I re-set the file ownerships for the   file's contents to root:root.

--- a/control_panel/srv/controlpanel/includes/leftbar.html
+++ b/control_panel/srv/controlpanel/includes/leftbar.html
@@ -4,9 +4,8 @@
 <h2>Controls</h2>
 <a href="/">System Status</a><br />
 <a href="/traffic">Network Traffic</a><br />
-Network Interfaces<br />
-Mesh Networking<br />
+<a href="/network">Configure Network Interfaces</a><br />
+Configure Mesh Networking<br />
 Gatewaying<br />
 Web Applications<br />
-Monitoring<br />
 </div>
