- Forgot to make the link to the /mesh sub-app active in include/leftbar.html. - Deleted backup files created by Bluefish (foo.html~).

--- a/control_panel/srv/controlpanel/includes/leftbar.html
+++ b/control_panel/srv/controlpanel/includes/leftbar.html
@@ -5,7 +5,7 @@
 <a href="/">System Status</a><br />
 <a href="/traffic">Network Traffic</a><br />
 <a href="/network">Configure Network Interfaces</a><br />
-Configure Mesh Networking<br />
+<a href="/mesh">Configure Mesh Networking</a><br />
 Gatewaying<br />
 Web Applications<br />
 </div>
