- Turned the "Gatewaying" link in includes/leftbar.html back into text,   added a link to "System service". - Initial commit of the Services() objecct in services.py.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/includes/leftbar.html
+++ b/control_panel/srv/controlpanel/includes/leftbar.html
@@ -6,6 +6,7 @@
 <a href="/traffic">Network Traffic</a><br />
 <a href="/network">Configure Network Interfaces</a><br />
 <a href="/mesh">Configure Mesh Networking</a><br />
+<a href="/services">Services</a><br />
 Gatewaying<br />
-Web Applications<br />
+System Services<br />
 </div>
