- Got rid of the duplicate 'System Services' line.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/includes/leftbar.html
+++ b/control_panel/srv/controlpanel/includes/leftbar.html
@@ -6,7 +6,6 @@
 <a href="/traffic">Network Traffic</a><br />
 <a href="/network">Configure Network Interfaces</a><br />
 <a href="/mesh">Configure Mesh Networking</a><br />
-<a href="/services">Services</a><br />
+<a href="/services">System Services</a><br />
 Gatewaying<br />
-System Services<br />
 </div>
