--- a/control_panel/srv/controlpanel/includes/header.html
+++ b/control_panel/srv/controlpanel/includes/header.html
@@ -1,5 +1,8 @@
+@charset "UTF-8";
+/* CSS Document */
+
 <!-- Implements the DIV along the top of the page that says what it's for. -->
 
-<div id="header" align="center">
+<div class="header">
 <h1>${purpose_of_page}</h1>
 </div>
