--- a/control_panel/srv/controlpanel/includes/leftbar.html
+++ b/control_panel/srv/controlpanel/includes/leftbar.html
@@ -3,10 +3,13 @@
 
 <h2>Controls</h2>
 <p>
+<a href="/network">Configure Network Interfaces</a><br />
+<a href="/mesh">Configure Mesh Network</a><br />
+<a href="/services">Start/Stop System Services</a><br />
+<a href="/gateways">(Optional) Configure Mesh Gateway</a><br />
+</p>
+
+<p>
 <a href="/">System Status</a><br />
 <a href="/traffic">Network Traffic</a><br />
-<a href="/network">Configure Network Interfaces</a><br />
-<a href="/mesh">Configure Mesh Networking</a><br />
-<a href="/services">System Services</a><br />
-<a href="/gateways">Gateways</a><br />
 </p>
