service directory scripts working with everything in the cgi-bin. need to break them off into other dirs later.

--- a/service_directory/tmpl/services_entry.tmpl
+++ b/service_directory/tmpl/services_entry.tmpl
@@ -1,1 +1,1 @@
-<div class="service"><a href="%(path)s">%(name)s</a>:&nbsp;%(desciption)s</div>
+<div class="service"><a href="%(path)s">%(name)s</a>:&nbsp;%(description)s</div>
