--- a/service_directory/tmpl/services_page.tmpl
+++ b/service_directory/tmpl/services_page.tmpl
@@ -1,12 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
 <title>Mesh Services</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
 <body>
+<div id="header">
+Services On This Mesh Network
+</div>
 <div id="content">
+<div id="internet-connected">
+%(internet-connected)s
+</div>
 <div id="service-list">
 %(service-list)s
 </div>
