--- a/service_directory/tmpl/services_page.tmpl
+++ b/service_directory/tmpl/services_page.tmpl
@@ -3,6 +3,10 @@
 <head>
 <title>Mesh Services</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="style/reset.css" />
+<link rel="stylesheet" type="text/css" href="style/style.css" />
+<link rel="stylesheet" type="text/css" href="style/text.css" />
+<link rel="stylesheet" type="text/css" href="style/main.css" />
 </head>
 <body>
 <div id="header">
