--- a/service_directory/tmpl/services_entry.tmpl
+++ b/service_directory/tmpl/services_entry.tmpl
@@ -1,1 +1,3 @@
+<!-- Copyright (C) 2013 Project Byzantium
+This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version. -->
 <div class="service"><a href="%(path)s">%(name)s</a>:&nbsp;%(description)s</div>
