--- a/service_directory/tmpl/services_page.tmpl
+++ b/service_directory/tmpl/services_page.tmpl
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Copyright (C) 2013 Project Byzantium
+This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version. -->
 <html>
 <head>
 <title>Mesh Services</title>
